# catch-the-countdown

./: Cargo.toml  Makefile  README.md  Song.json  Trailer Song.mid  catch-the-countdown.todo  flake.nix  levels.ldtk
html/: catch-the-countdown.d  catch-the-countdown.js  catch_the_countdown.data  catch_the_countdown.wasm  index.html
levels/backups/04980130-1460-11ee-a333-4f117f239e7f_2023-07-29_16-53-33_crash/: levels.ldtk
src/: assets.rs  level.rs  main.rs  player.rs
